[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web = "4.7.0"
bigdecimal = "0.4.4"
config = "0.14.0"
dotenv = "0.15.0"
enum_stringify = "0.5.0"
futures = "0.3.30"
num-bigint = "0.4.5"
redis = "0.25.4"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
scylla = "0.13.0"
serde = "1.0.203"
serde_json = { version = "1.0.117", features = ["raw_value"] }
strum = "0.26.2"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
