[package]
name = "balance-exchanger"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "balance-exchanger"

[dependencies]
enum_stringify = "0.5.0"
futures = "0.3.30"
rayon = "1.10.0"
redis = "0.25.4"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
scylla = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
strum = "0.26.2"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tokio-rayon = "2.1.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
