[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "matching-engine"

[dependencies]
actix-web = "4.6.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.203", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.2"
config = { version = "0.13.3", features = ["yaml"] }
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
log = "0.4.21"
hex = "0.4.3"
chrono = "0.4.38"
serde_json = { version = "1.0.117", features = ["raw_value"] }
redis = "0.25.4"
enum_stringify = "0.4.2"
rayon = "1.10.0"
scylla = "0.13.0"
