[package]
name = "wss"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_stringify = "0.5.0"
futures-util = "0.3.30"
once_cell = "1.19.0"
redis = "0.25.4"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"

