[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
actix-web.workspace =true
config.workspace = true
dotenv.workspace = true
enum_stringify.workspace = true
futures.workspace = true
num-bigint.workspace = true
redis.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
scylla.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace =true
uuid.workspace = true
