[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
config.workspace = true
dotenv.workspace = true
tokio.workspace = true
tracing.workspace = true
log.workspace = true
hex.workspace = true
chrono.workspace = true
serde_json.workspace = true
redis.workspace = true
enum_stringify.workspace = true
rayon.workspace = true
scylla.workspace = true
uuid.workspace = true
futures.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
tracing-subscriber.workspace = true