[package]
name = "wss"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_stringify.workspace = true
once_cell.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace =true
